rustler_codegen/tests/ui/nif-macro-unrecognized-attribute.rs
use rustler_codegen::nif;

#[nif(scheduler = "DirtyCpu")]
fn add(a: i64, b: i64) -> i64 {
    a + b
}

fn main() {}
